cmake_minimum_required(VERSION 3.11)

project(Program2425)

set(CXX_STANDARD 17)
set(C_STANDARD 17)

set(CXX_STANDARD_REQUIRED TRUE)


add_executable(a228 src/a228.c)
add_executable(a250 src/a250.c)
add_executable(a257 src/a257.c)
add_executable(mod_profile src/mod_profile.c)
add_executable(cses2181 src/cses2181.c)
add_executable(rbt src/rbt.c)
add_executable(tarjan src/tarjan.cpp)